export const snapshot = {};

snapshot[`Issue Update Command - Help Text 1`] = `
stdout:
\`
Usage: update [issueId]

Description:

  Update a linear issue

Options:

  -h, --help                         - Show this help.                                                     
  -a, --assignee      <assignee>     - Assign the issue to 'self' or someone (by username or name)         
  --due-date          <dueDate>      - Due date of the issue                                               
  --clear-due-date                   - Clear the due date on the issue                                     
  --parent            <parent>       - Parent issue (if any) as a team_number code                         
  -p, --priority      <priority>     - Priority of the issue (1-4, descending priority)                    
  --estimate          <estimate>     - Points estimate of the issue                                        
  -d, --description   <description>  - Description of the issue (prefer --description-file for markdown)   
  --comment           <comment>      - Add a comment after successfully updating the issue                 
  --description-file  <path>         - Read description from a file (preferred for markdown content)       
  -l, --label         <label>        - Issue label associated with the issue. May be repeated.             
  --team              <team>         - Team associated with the issue (if not your default team)           
  --project           <project>      - Name or slug ID of the project with the issue                       
  -s, --state         <state>        - Workflow state for the issue (by name or type)                      
  --milestone         <milestone>    - Name of the project milestone                                       
  --cycle             <cycle>        - Cycle name, number, or 'active'                                     
  --no-interactive                   - Accepted for compatibility; issue update is always non-interactive  
  -j, --json                         - Output as JSON                                                      
  --dry-run                          - Preview the update without mutating the issue                       
  --timeout-ms        <timeoutMs>    - Timeout for write confirmation in milliseconds                      
  -t, --title         <title>        - Title of the issue                                                  

Examples:

  Update state and assignee         linear issue update ENG-123 --state started --assignee self                         
  Preview an update with a comment  linear issue update ENG-123 --state completed --comment "Ready for review" --dry-run
  Pipe a description into an update cat description.md | linear issue update ENG-123 --state started --dry-run --json   
  Return the updated issue as JSON  linear issue update ENG-123 --title "Fix auth timeout edge case" --json             

\`
stderr:
""
`;

snapshot[`Issue Update Command - Happy Path 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Updated authentication bug fix
https://linear.app/test-team/issue/ENG-123/updated-authentication-bug-fix
"
stderr:
""
`;

snapshot[`Issue Update Command - Accepts No Interactive Flag 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Updated without prompts
https://linear.app/test-team/issue/ENG-123/updated-without-prompts
"
stderr:
""
`;

snapshot[`Issue Update Command - JSON Output 1`] = `
stdout:
'{
  "id": "issue-existing-123",
  "identifier": "ENG-123",
  "title": "Updated from bot",
  "url": "https://linear.app/test-team/issue/ENG-123/updated-from-bot",
  "dueDate": "2026-04-01",
  "assignee": {
    "id": "user-self-123",
    "name": "alice.bot",
    "displayName": "Alice Bot",
    "initials": "AB"
  },
  "parent": {
    "id": "parent-issue-id",
    "identifier": "ENG-100",
    "title": "Parent Epic",
    "url": "https://linear.app/test-team/issue/ENG-100/parent-epic",
    "dueDate": null,
    "state": {
      "name": "In Progress",
      "color": "#f87462"
    }
  },
  "state": {
    "name": "Todo",
    "color": "#bec2c8"
  },
  "comment": {
    "id": "comment-json-123",
    "body": "Investigating now",
    "createdAt": "2026-03-22T12:45:00Z",
    "url": "https://linear.app/test-team/issue/ENG-123/updated-from-bot#comment-json-123",
    "parentId": null,
    "issue": {
      "id": "issue-existing-123",
      "identifier": "ENG-123",
      "title": "Updated from bot",
      "url": "https://linear.app/test-team/issue/ENG-123/updated-from-bot"
    },
    "user": {
      "name": "alice.bot",
      "displayName": "Alice Bot"
    }
  },
  "receipt": {
    "operationId": "issue.update",
    "resource": "issue",
    "action": "update",
    "resolvedRefs": {
      "issueIdentifier": "ENG-123",
      "teamKey": "ENG",
      "assignee": "alice.bot",
      "parentIssueIdentifier": "ENG-100",
      "state": "Todo"
    },
    "appliedChanges": [
      "title",
      "assignee",
      "dueDate",
      "team",
      "comment"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "read_before_retry"
  },
  "operation": {
    "family": "write_operation",
    "version": "v1",
    "phase": "apply",
    "command": "issue.update",
    "resource": "issue",
    "action": "update",
    "summary": "Updated issue ENG-123",
    "refs": {
      "issueIdentifier": "ENG-123",
      "teamKey": "ENG",
      "assignee": "alice.bot",
      "parentIssueIdentifier": "ENG-100",
      "state": "Todo"
    },
    "changes": [
      "title",
      "assignee",
      "dueDate",
      "team",
      "comment"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "read_before_retry"
  }
}
'
stderr:
""
`;

snapshot[`Issue Update Command - JSON Dry Run 1`] = `
stdout:
'{
  "success": true,
  "dryRun": true,
  "summary": "Would update issue ENG-123",
  "data": {
    "command": "issue.update",
    "issue": {
      "identifier": "ENG-123"
    },
    "changes": {
      "title": "Updated from bot",
      "assigneeId": "user-self-123",
      "dueDate": "2026-04-01",
      "teamId": "team-eng-id",
      "parent": null
    },
    "comment": "Investigating now"
  },
  "operation": {
    "family": "write_operation",
    "version": "v1",
    "phase": "preview",
    "command": "issue.update",
    "resource": "issue",
    "action": "update",
    "summary": "Would update issue ENG-123",
    "refs": {
      "issueIdentifier": "ENG-123",
      "teamKey": "ENG",
      "parentIssueIdentifier": null,
      "state": null
    },
    "changes": [
      "title",
      "assignee",
      "dueDate",
      "team",
      "comment"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "apply"
  }
}
'
stderr:
""
`;

snapshot[`Issue Update Command - With Comment 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
✓ Comment added to ENG-123
https://linear.app/test-team/issue/ENG-123/test-issue#comment-123
"
stderr:
""
`;

snapshot[`Issue Update Command - With Milestone 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Case Insensitive Label Matching 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Short Flag -p Is Priority 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - With Cycle 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Clear Due Date 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Due Date Conflict 1`] = `
stdout:
""
stderr:
"✗ Failed to update issue: Cannot specify both --due-date and --clear-due-date
  Use --due-date to set a due date, or --clear-due-date to remove it.
"
`;

snapshot[`Issue Update Command - JSON Due Date Conflict 1`] = `
stdout:
'{
  "success": false,
  "error": {
    "type": "validation_error",
    "message": "Cannot specify both --due-date and --clear-due-date",
    "suggestion": "Use --due-date to set a due date, or --clear-due-date to remove it.",
    "context": "Failed to update issue"
  }
}
'
stderr:
""
`;

snapshot[`Issue Update Command - JSON Comment Requires Updates 1`] = `
stdout:
'{
  "success": false,
  "error": {
    "type": "validation_error",
    "message": "Cannot use --comment without any issue updates",
    "suggestion": "Use \`linear issue comment add <ISSUE> --body <text>\` or pipe the comment body to \`linear issue comment add\` for a standalone comment.",
    "context": "Failed to update issue"
  }
}
'
stderr:
""
`;

snapshot[`Issue Update Command - Description Parse Guidance 1`] = `
stdout:
""
stderr:
\`✗ Failed to update issue: Missing value for option "--description".
  If you're passing long Markdown, prefer --description-file <path> or pipe content on stdin.
\`
`;

snapshot[`Issue Update Command - JSON Description Parse Guidance 1`] = `
stdout:
\`{
  "success": false,
  "error": {
    "type": "validation_error",
    "message": "Missing value for option \\\\"--description\\\\".",
    "suggestion": "If you're passing long Markdown, prefer --description-file <path> or pipe content on stdin.",
    "context": "Failed to update issue"
  }
}
\`
stderr:
""
`;
